# riic-engine

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.husky/: pre-commit
riic-fetch/: Cargo.toml  README.md  config.toml
riic-fetch/src/: base.rs  config.rs  consts.rs  lib.rs  main.rs  operator.rs  operator_de.rs  operator_ser.rs  skill.rs  terms.rs  traits.rs
scripts/: main.py
src/: app.html  focus.css  glass.css  input.css  misc.css  stores.ts  tooltip.css  tooltip.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: base.rs  db.rs  lib.rs  main.rs  savefile.rs  saves.rs  window.rs
src/lib/: ctxmenu.ts  data.ts  stores.ts  tooltip.ts  types.ts  utils.ts
src/lib/components/: Button.svelte  Error.svelte  FacilityIcon.svelte  GradientContainer.svelte  Header.svelte  Modal.svelte  NumberInput.svelte  SaveDisplayControls.svelte  SaveEntry.svelte  SaveNameInput.svelte
src/lib/components/main/: CreateButton.svelte  Entry.svelte  Header.svelte  NameInput.svelte
src/lib/data/: chars.json  facilities.json  items.json  skills.json  terms.json  text-colors.json
src/lib/images/: contours.avif  lancet.avif  logo.avif
src/lib/images/items/: drone.avif
src/lib/images/ui/: drones.avif  power.avif
src/routes/: +error.svelte  +layout.svelte  +page.svelte  Entry.svelte  EntrySettings.svelte  ExportNotice.svelte  Header.svelte  NameInput.svelte
src/routes/editor/: +layout.svelte  +page.svelte  Drones.svelte  Links.svelte  NumberInput.svelte  PowerUsage.svelte  SaveStats.svelte  ShiftCount.svelte  ShiftInterval.svelte
src/routes/editor/editor/: +page.svelte  BoostMarker.svelte  ColumnLines.svelte  FacilityGrid.svelte  FacilityRow.svelte  InteractionBox.svelte  ProductBox.svelte  ProductIcon.svelte  ProductMenu.svelte  RowWrapper.svelte  ShiftBox.svelte  Slider.svelte  ZoomControls.svelte
src/routes/editor/results/: +page.svelte
src/routes/editor/setup/: +page.svelte  AddFacility.svelte  Facility.svelte  LevelIndicator.svelte
static/chars/: char_002_amiya.avif  char_003_kalts.avif  char_009_12fce.avif  char_010_chen.avif  char_017_huang.avif  char_1011_lava2.avif  char_1012_skadi2.avif  char_1013_chen2.avif  char_1014_nearl2.avif  char_1016_agoat2.avif  char_101_sora.avif  char_1020_reed2.avif  char_1021_kroos2.avif  char_1023_ghost2.avif  char_1024_hbisc2.avif  char_1026_gvial2.avif  char_1027_greyy2.avif  char_1028_texas2.avif  char_1029_yato2.avif  char_102_texas.avif  char_1030_noirc2.avif  char_1031_slent2.avif  char_1032_excu2.avif  char_1033_swire2.avif  char_1034_jesca2.avif  char_1035_wisdel.avif  char_1036_fang2.avif  char_103_angel.avif  char_106_franka.avif  char_107_liskam.avif  char_108_silent.avif  char_109_fmout.avif  char_110_deepcl.avif  char_112_siege.avif  char_113_cqbw.avif  char_115_headbr.avif  char_117_myrrh.avif  char_118_yuki.avif  char_120_hibisc.avif  char_121_lava.avif  (+298 more)
static/elite/: 0.avif  1.avif  2.avif
static/facilities/: control.avif  dormitory.avif  hire.avif  manufacture.avif  meeting.avif  power.avif  trading.avif  training.avif  workshop.avif
static/items/: exp1000.avif  exp200.avif  exp400.avif  gold.avif  lmd.avif  orundum.avif  shard.avif
static/rarities/: 1.avif  2.avif  3.avif  4.avif  5.avif
static/skills/: bskil_meet_team&char.avif  bskill_ctrl_aegir.avif  bskill_ctrl_aegir2.avif  bskill_ctrl_amiya.avif  bskill_ctrl_amiya1.avif  bskill_ctrl_ash.avif  bskill_ctrl_bd_spd.avif  bskill_ctrl_c_babel.avif  bskill_ctrl_c_babel2.avif  bskill_ctrl_c_spd.avif  bskill_ctrl_c_spd1.avif  bskill_ctrl_c_victoria.avif  bskill_ctrl_c_wt.avif  bskill_ctrl_c_wt1.avif  bskill_ctrl_c_wt2.avif  bskill_ctrl_clear_sui.avif  bskill_ctrl_cost.avif  bskill_ctrl_cost_aegir.avif  bskill_ctrl_cost_bd1&bd2.avif  bskill_ctrl_cost_bd1.avif  bskill_ctrl_cost_bd2.avif  bskill_ctrl_cost_bd3.avif  bskill_ctrl_cost_bd4.avif  bskill_ctrl_cost_expand.avif  bskill_ctrl_cost_felyne.avif  bskill_ctrl_ela.avif  bskill_ctrl_felyne.avif  bskill_ctrl_fraction_knight.avif  bskill_ctrl_g_limit&spd.avif  bskill_ctrl_h_spd.avif  bskill_ctrl_karlan.avif  bskill_ctrl_lda.avif  bskill_ctrl_lda_add.avif  bskill_ctrl_leader.avif  bskill_ctrl_lonely.avif  bskill_ctrl_lungmen.avif  bskill_ctrl_p_bot.avif  bskill_ctrl_p_spd.avif  bskill_ctrl_psk.avif  bskill_ctrl_r6.avif  (+366 more)
