[workspace]
members = ["riic-fetch", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kyle Chen"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ark-db/riic-engine"
edition = "2021"
publish = false

[workspace.dependencies]
ahash = "0.8.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
unused = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
non_ascii_idents = "deny"
noop_method_call = "deny"
pointer_structural_match = "deny"
rust_2018_idioms = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
