[workspace]
members = ["riic-fetch", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kyle Chen"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ark-db/riic-engine"
edition = "2021"
publish = false

[workspace.dependencies]
ahash = "0.8.11"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"

[workspace.lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
strip = true
