[package]
name = "riic-fetch"
version.workspace = true
description = "Asset-fetching program for RIIC Engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
image = { version = "0.24.7", default-features = false, features = ["png", "webp", "webp-encoder"] }
indexmap = { version = "2.1.0", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.22", default-features = false, features = ["brotli", "gzip", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
