[package]
name = "riic-fetch"
version.workspace = true
description = "Asset-fetching program for RIIC Engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.79"
image = { version = "0.24.8", default-features = false, features = ["avif-encoder", "png"] }
indexmap = { version = "2.2.2", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.24", default-features = false, features = ["brotli", "gzip", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.10", default-features = false, features = ["parse"] }

[lints]
workspace = true
