[package]
name = "riic-fetch"
version.workspace = true
description = "Asset-fetching program for RIIC Engine"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.86"
image = { version = "0.25.1", default-features = false, features = ["avif", "png"] }
indexmap = { version = "2.2.6", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.5", default-features = false, features = ["brotli", "gzip", "http2", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

[lints]
workspace = true
