[package]
name = "riic-engine"
version.workspace = true
description = "Standalone desktop app for simulating performance of RIIC setups"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version = "1.57"
publish.workspace = true

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
ahash.workspace = true
bincode = "2.0.0-rc.3"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
once_cell = { version = "1.17.1", features = ["parking_lot"] }
open = "4.1.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "limits"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1.3.0", features = [] }
thiserror.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
