[package]
name = "riic-engine"
version.workspace = true
description = "Standalone desktop app for simulating performance of RIIC setups"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version = "1.60"
publish.workspace = true

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
ahash.workspace = true
bincode = "2.0.0-rc.3"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
open = "5.1.4"
parking_lot = "0.12.3"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "limits"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1.7.1", features = [] }
thiserror.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints]
workspace = true
